<resources>
    <string name="app_name">Memory</string>
    <string name="memory">Memory-Game</string>
    <string name="start">Start New Game ></string>
    <string name="about">About</string>
    <string name="app_description">This is the App created for the final project of the App-Development course</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="newGameDialogText">Create a new game</string>
    <string name="startD">START ></string>
    <string name="selectSize">Amount of tiles:</string>
    <string name="turnCountText">Turn Count: 0</string>
    <string name="victory">VICTORY!</string>
    <string name="victoryText">Congratulations,</string>
    <string name="restart">Restart</string>
    <string name="menu">&#60; Menu</string>
    <string name="backDialog">Back to main menu?</string>
</resources>